popup section completed

--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,11 @@
 
 <head>
     <title>PUNter</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-    <ul><li></li></ul>
+    <b><a href="https://puns.dev/" target="_blank">Puns.dev</a></b>
 </body>
 
 </html>
