--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <b><a href="https://puns.dev/" target="_blank">Puns.dev</a></b>
+    <b><a href="https://puns.dev/" target="_blank" id="popup_anchor">Puns.dev</a></b>
 </body>
 
 </html>
