random puns displayed on a new tab

--- a/newtab.html
+++ b/newtab.html
@@ -3,10 +3,14 @@
 
 <head>
     <title>PUNter</title>
+    <script src="jquery-3.4.1.min.js"></script>
+    <script src="script.js"></script>
 </head>
 
-<body>
-    <h1>Hello World!</h1>
+<body >
+    <h1 id="question"></h1>
+    <h1 id="answer"></h1>
+
 </body>
 
 </html>
