--- a/newtab.html
+++ b/newtab.html
@@ -8,8 +8,13 @@
 </head>
 
 <body >
-    <h1 id="question"></h1>
-    <h1 id="answer"></h1>
+    <div class="app">
+        <div class="pun">
+            <h2 id="question"></h2>
+            <h2 id="answer"></h2>
+        </div>
+    </div>
+
 
 </body>
 
