puns.dev styling added

--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,10 @@
 
 <head>
     <title>PUNter</title>
-    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-    <b><a href="https://puns.dev/" target="_blank" id="popup_anchor">Puns.dev</a></b>
+    <b><a href="https://puns.dev/" target="_blank" id="popup_anchor" style="text-decoration: none;color: black;font-size: medium;">Puns.dev</a></b>
 </body>
 
 </html>
