--- a/newtab.html
+++ b/newtab.html
@@ -5,13 +5,14 @@
     <title>PUNter</title>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
-<body >
+<body>
     <div class="app">
         <div class="pun">
-            <h2 id="question"></h2>
-            <h2 id="answer"></h2>
+            <p id="question"></p>
+            <p id="answer"></p>
         </div>
     </div>
 
