--- a/newtab.html
+++ b/newtab.html
@@ -14,8 +14,12 @@
             <p id="question"></p>
             <p id="answer"></p>
         </div>
+        <div class="footer">
+            <p class="hide-mobile" v-on:click.stop.prevent="openGitHub"><a rel="external" href="https://github.com/AlexLakatos/computer-puns">Contribute on GitHub</a></p>
+            <p>Made with ❤️ by <a rel="external" href="https://nilanshbansal.github.io">Nilansh</a></p>
+            <p v-on:click.stop.prevent="openTwitter">Open Source contribution by <a rel="external" href="https://twitter.com/lakatos88">Laka</a> & others</p>
+        </div>
     </div>
-
 
 </body>
 
