heart svg added

--- a/newtab.html
+++ b/newtab.html
@@ -16,7 +16,12 @@
         </div>
         <div class="footer">
             <p class="hide-mobile" v-on:click.stop.prevent="openGitHub"><a rel="external" href="https://github.com/AlexLakatos/computer-puns">Contribute on GitHub</a></p>
-            <p>Made with ❤️ by <a rel="external" href="https://nilanshbansal.github.io">Nilansh</a></p>
+            <p>Made with &nbsp;
+                <svg class="heart" viewBox="0 0 32 29.6">
+                    <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
+                  c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
+                </svg> 
+                &nbsp;by <a rel="external" href="https://nilanshbansal.github.io">Nilansh</a></p>
             <p v-on:click.stop.prevent="openTwitter">Open Source contribution by <a rel="external" href="https://twitter.com/lakatos88">Laka</a> & others</p>
         </div>
     </div>
