--- a/newtab.html
+++ b/newtab.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PUNter</title>
+    <title>PunTer</title>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css"/>
